quotes-flask/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: frontend
  namespace: quotes-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
    spec:
      containers:
        - image: ghcr.io/eficode-academy/quotes-flask-frontend:release
          name: quotes-flask-frontend
          ports:
            - containerPort: 5000
          resources: {}
